--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,10 +9,11 @@ on:
 jobs:
 
   build:
-
-    runs-on: golang-latest
+    
+    runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/setup-go@v3.5.0
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag melting:$(date +%s)
