--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,3 +17,23 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file dockerfile --tag melting:$(date +%s)
+    - name: Docker Login
+      uses: docker/login-action@v2.1.0
+      with:
+          username: ${{secret.DOCKERHUB_TOKEN}}
+
+#创建镜像tag的hash值
+    - name: Add SHORT_SHA env property with commit short sha
+      run: |
+          echo "SHORT_SHA=`git rev-parse --short HEAD`" >> $GITHUB_ENV
+
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/project:${{env.SHORT_SHA}}
+
+
+
+
+
