--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,7 +20,8 @@ jobs:
     - name: Docker Login
       uses: docker/login-action@v2.1.0
       with:
-          username: ${{secrets.DOCKERHUB_TOKEN}}
+          username: ${{secrets.DOCKERHUB_USERNAME}}
+          password: ${{secrets.DOCKERHUB_TOKEN}}
 
 #创建镜像tag的hash值
     - name: Add SHORT_SHA env property with commit short sha
