--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,14 +20,15 @@ jobs:
       with:
           username: ${{secrets.DOCKERHUB_USERNAME}}
           password: ${{secrets.DOCKERHUB_TOKEN}}
-
+    - run: |
+          echo "SHORT_SHA=`git rev-parse --short HEAD`" >> $GITHUB_ENV
     - name: Build and push
       uses: docker/build-push-action@v3.2.0
       with:
           file: dockerfile
           context: .
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/melting:$(date +%s)
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/melting:${{env.SHORT_SHA}}
 
 
 
